# datamart-profiler

./: .gitignore  LICENSE  MANIFEST.in  README.md  curated_spatial_cta.csv  generate_synthetic_cta.py  inference_cta.py  pyproject.toml  requirements.txt  synthetic_df.csv  synthetic_df_checkpoint.csv  train_cta_classifier.py
.github/workflows/: tests.yml
atlas_profiler/: __init__.py
examples/: get_started.ipynb
profiler/: __init__.py  core.py  numerical.py  profile_types.py  spatial.py  temporal.py  types.py  warning_tools.py
tests/: test_numerical.py  test_spatial_model.py  test_temporal.py  test_warning_tools.py
training/: curated_spatial_cta.csv  extract_embeddings_for_viz.py  faker_synthetic_cta.py  inference_cta.py  rules_cta.py  synthetic_df_non_spatial.csv  train_cta_classifier.py
